@@ -1,6 +1,8 @@
 package com.green.greengram.config.model;
 
+import com.green.greengram.config.enumcode.model.EnumUserRole;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,32 +11,30 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
+@Slf4j
 @Getter
 public class UserPrincipal implements UserDetails {
     private final long memberId;
-    private final Collection<? extends GrantedAuthority> authorities;  // 인증 권한
+    private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserPrincipal(long memberId, List<String> roles) {
+    public UserPrincipal(long memberId, List<EnumUserRole> roles) {
         this.memberId = memberId;
-//        방법1
         List<SimpleGrantedAuthority> list = new ArrayList<>();
-        for(String role : roles){
-            list.add(new SimpleGrantedAuthority(role));
-        }
-        this.authorities = list;
+//         방법 1
+//        for(EnumUserRole role : roles){
+//            String roleName = String.format("ROLE_%s", role.name());
+//            log.info("roleName: {}", roleName);
+//            list.add(new SimpleGrantedAuthority(roleName));
+//        }
+//        this.authorities = list;
+
 //        방법2
-//        this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(role)).collect(Collectors.toList());
-    }
-
-    //    권한
-
-    @Override
-    public String getPassword() {
-        return "";
+        this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(String.format("ROLE_%s", role.name()))).toList();
     }
 
     @Override
-    public String getUsername() {
-        return "";
-    }
+    public String getPassword() { return null; }
+
+    @Override
+    public String getUsername() { return null; }
 }
